--- a/package.json
+++ b/package.json
@@ -6,7 +6,33 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "jest",
+    "test-watch": "jest --watch",
+    "clear_jest": "jest --clearCache"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": [
+      "<rootDir>/setupJest.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/node_modules/",
+      "<rootDir>/dist/",
+      "<rootDir>/src/test.ts"
+    ],
+    "globals": {
+      "ts-jest": {
+        "isolatedModules": false,
+        "tsConfig": "<rootDir>/tsconfig.spec.json",
+        "stringifyContentPathRegex": "\\.html$",
+        "astTransformers": {
+          "before": [
+            "<rootDir>/node_modules/jest-preset-angular/build/InlineFilesTransformer",
+            "<rootDir>/node_modules/jest-preset-angular/build/StripStylesTransformer"
+          ]
+        }
+      }
+    }
   },
   "private": true,
   "dependencies": {
@@ -30,10 +56,10 @@
     "@angular/cli": "~12.0.0",
     "@angular/compiler-cli": "~12.0.0",
     "@angular/localize": "^12.0.0",
-    "@types/jasmine": "~3.6.0",
-    "@types/jest": "^26.0.23",
+    "@babel/plugin-syntax-typescript": "^7.12.13",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/jest": "^26.0.22",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.7.0",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.4.0",
     "karma-coverage": "~2.0.3",
