--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -6,7 +6,8 @@
     "types": [
       "jest",
       "jasmine"
-    ]
+    ],
+    "emitDecoratorMetadata" :true
   },
   "files": [
     "src/test.ts",
